@@ -574,6 +574,11 @@ as Perl itself.
 Shlomi Fish hereby disclaims any implicit or explicit copyrights on this
 software.
 
+=head1 LICENSE
+
+This program is free software; you can redistribute it and/or modify it under 
+the same terms as Perl itself.
+
 =head1 SEE ALSO
 
 perl(1).
